feat: added router, home page and created table, loader and wrapper components

--- a/view/src/index.css
+++ b/view/src/index.css
@@ -48,3 +48,68 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 65px;
+  aspect-ratio: 1;
+  position: relative;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  border-radius: 50px;
+  box-shadow: 0 0 0 3px inset #1a1a1a;
+  animation: l5 2.5s infinite;
+}
+
+.loader:after {
+  animation-delay: -1.25s;
+  border-radius: 0;
+}
+
+@keyframes l5 {
+  0% {
+    inset: 0 35px 35px 0
+  }
+
+  12.5% {
+    inset: 0 35px 0 0
+  }
+
+  25% {
+    inset: 35px 35px 0 0
+  }
+
+  37.5% {
+    inset: 35px 0 0 0
+  }
+
+  50% {
+    inset: 35px 0 0 35px
+  }
+
+  62.5% {
+    inset: 0 0 0 35px
+  }
+
+  75% {
+    inset: 0 0 35px 35px
+  }
+
+  87.5% {
+    inset: 0 0 35px 0
+  }
+
+  100% {
+    inset: 0 35px 35px 0
+  }
+}
+
+
+@theme {
+  --color-custom-dark-blue: #090f37;
+  --color-custom-light-blue: #dfe7fe;
+}
