feat: added button component and change css to remove radio

--- a/view/src/index.css
+++ b/view/src/index.css
@@ -30,26 +30,6 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 /* HTML: <div class="loader"></div> */
 .loader {
   width: 65px;
@@ -61,7 +41,6 @@ button:focus-visible {
 .loader:after {
   content: "";
   position: absolute;
-  border-radius: 50px;
   box-shadow: 0 0 0 3px inset #1a1a1a;
   animation: l5 2.5s infinite;
 }
@@ -113,4 +92,5 @@ button:focus-visible {
 @theme {
   --color-custom-dark-blue: #090f37;
   --color-custom-light-blue: #dfe7fe;
+  --color-custom-medium-blue: #4B2ED8;
 }
